--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "private": true,
   "dependencies": {
+    "@google-cloud/logging-bunyan": "^5.1.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "axios": "^1.6.0",
+    "bunyan": "^1.8.15",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
@@ -32,6 +34,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/bunyan": "^1.8.11",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
