--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "prepare": "node ./scripts/prepare.js"
+    "deploy": "node ./scripts/deploy.js"
 
   },
   "private": true,
